# galaxy-buds-gui-rs

./: Cargo.toml  build.rs  galaxy-buds-gui-rs.cmb
data/: com.github.rodrigost23.GalaxyBudsGui.gschema.xml
data/ui/: main.ui
src/: app.rs  bluetooth.rs  bluetooth_worker.rs  buds_message.rs  buds_worker.rs  consts.rs  macros.rs  main.rs  settings.rs  ui.rs
src/app/: dialog_find.rs  main.rs  mod.rs  page_connection.rs  page_manage.rs  page_noise.rs
src/gtk/: main.ui
src/model/: buds_message.rs  buds_status.rs  device_info.rs  mod.rs  util.rs
