[package]
name = "galaxy-buds-gui-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { package = "libadwaita", version = "0.8", features = ["v1_7"] }
gtk4 = { version = "0.10", features = ["v4_10"] }
bluer = { version = "0.17", features = ["bluetoothd", "id", "rfcomm"] }
galaxy_buds_rs = "0.2.10"
tokio = { version = "1.47", features = ["full"] }
futures = "0.3.31"
